--- a/app/views/feeds/new.html.erb
+++ b/app/views/feeds/new.html.erb
@@ -1,4 +1,18 @@
 <%= form_for :feed, url: feeds_path do |f| %>
+  <% if @feed.errors.any? %>
+    <div id="error_explanation">
+      <h2>
+        <%= pluralize(@feed.errors.count, "error") %> prohibited
+        this article from being saved:
+      </h2>
+      <ul>
+        <% @feed.errors.full_messages.each do |msg| %>
+          <li><%= msg %></li>
+        <% end %>
+      </ul>
+    </div>
+  <% end %>
+
   <p>
     <%= f.label :url %><br>
     <%= f.text_field :url %>
