--- a/app/views/feeds/index.html.erb
+++ b/app/views/feeds/index.html.erb
@@ -12,6 +12,10 @@
       <td><%= feed.id %></td>
       <td><%= feed.title %></td>
       <td><%= feed.url %></td>
+      <td><%= link_to 'Show', feed_path(feed) %></td>
+      <td><%= link_to 'Remove', feed_path(feed),
+                                 method: :delete,
+                                 data: { confirm: 'Are you sure?' } %></td>
     </tr>
   <% end %>
 </table>
