--- a/app/views/feeds/index.html.erb
+++ b/app/views/feeds/index.html.erb
@@ -1,21 +1,13 @@
-<h1>Listing feeds</h1>
- 
-<table>
-  <tr>
-    <th>Id</th>
-    <th>Title</th>
-    <th>URL</th>
-  </tr>
- 
+<ul> 
   <% @feeds.each do |feed| %>
-    <tr>
-      <td><%= feed.id %></td>
-      <td><%= feed.title %></td>
-      <td><%= feed.url %></td>
-      <td><%= link_to 'Show', feed_path(feed) %></td>
-      <td><%= link_to 'Remove', feed_path(feed),
-                                 method: :delete,
-                                 data: { confirm: 'Are you sure?' } %></td>
-    </tr>
+    <a href="<%= feed.url %>">
+      <li>
+        <%= feed.title %>
+        <%= link_to image_tag("window-close-symbolic.svg", class: "remove-button"),
+                              feed_path(feed),
+                              method: :delete,
+                              data: { confirm: 'Are you sure?' } %>
+      </li>
+    </a>
   <% end %>
-</table>
+</ul>
