--- a/app/assets/stylesheets/feeds.scss
+++ b/app/assets/stylesheets/feeds.scss
@@ -1,13 +1,4 @@
-$bg_color: #fafafa;
-$default_font: "Lato", "Open Sans", "Helvetica", sans-serif;
-$default_padding: 6px;
-$link_color: #383838;
-
-body
-{
-  font: 14px $default_font;
-  background-color: $bg_color;
-}
+@import "_common.scss";
 
 a, a:visited
 {
